--- a/css/index.css
+++ b/css/index.css
@@ -47,6 +47,7 @@ body {
     -moz-transition: all 0.15s linear; 
     -o-transition: all 0.15s linear; 
     -ms-transition: all 0.15s linear; 
+    font-family: 'Open Sans', Verdana, Helvetica, Arial, sans-serif;
     text-align: left;
     list-style-type: none;
     padding: 0;
@@ -138,7 +139,7 @@ body {
 }
 
 #header-text h1 {
-    font-family: 'Raleway';
+    font-family: 'Raleway', 'Segoe UI', Verdana, Helvetica, Arial, sans-serif;
     font-weight: 500;
     font-size: 300%;
 }
