Finished redesign; converting CSS to LESS

--- a/css/index.less
+++ b/css/index.less
@@ -5,13 +5,13 @@
 // CODED IN BRACKETS
 
 // VARIABLES
-@col-bg: #400101;
-@col-hf: #590202;
+@col-bg: #4A0101;
+@col-hf: #660202;
 @col-nv: 'col-hf';
-@col-bd: #BF0404;
+@col-bd: #7F0303;
 
 @col-tx: #F2F2F2;
-@col-ln: #A6A6A6;
+@col-ln: #727272;
 
 @height-hf: 150px;
 @height-nav: 50px;
@@ -23,16 +23,29 @@
     padding-right: @padding;
 }
 
+.smoothtrans {
+    -webkit-transition: all 0.15s linear;
+    -moz-transition: all 0.15s linear;
+    -o-transition: all 0.15s linear;
+    -ms-transition: all 0.15s linear;
+}
+
 /* LAYOUT */
 
 html, body {
     padding: 0;
     margin: auto;
-    height: 1400px;
+    height: 1550px;
 }
 
 html {
-    background: @col-bg;
+    background:
+    radial-gradient(black 15%, transparent 16%) 0 0,
+    radial-gradient(black 15%, transparent 16%) 8px 8px,
+    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+    background-color: @col-bg;
+    background-size:16px 16px;
 }
 
 body {
@@ -57,6 +70,8 @@ body {
     background: @col-hf;
     color: @col-tx;
     display: table;
+    padding-top: 5px;
+    padding-bottom: 5px;
     .side-padding;
 }
 
@@ -84,21 +99,22 @@ body {
 
 #header-text {
     width: 600px;
-    display: table-cell;
+    display: inline-block;
     vertical-align: middle;
     float: left;
-    padding-bottom: 25px;
 }
+@ht-lnspc: 10px;
 
 #header-text h1 {
     font-family: 'Raleway';
     font-weight: 500;
     font-size: 300%;
+    margin-bottom: (@ht-lnspc / 2);
 }
 
 #header-text h2 {
     vertical-align: middle;
-    line-height: 30%;
+    margin-top: (@ht-lnspc / 2);
 }
 
 #header a {
@@ -139,21 +155,29 @@ body {
     // MUST BE UPDATED IF MORE LINKS ARE ADDED
     width: (@width / 10);
     vertical-align: middle;
+    .side-padding(5px);
     /* STYLING */
     text-align: center;
     color: @col-tx;
     text-transform: uppercase;
-    border-right: 1px solid @col-tx;
+    .smoothtrans;
 }
 
-#navbar p:last-child {
-    border-right: 0;
+#navbar p:hover {
+    font-weight: bold;
+    background: #B20404;
+}
+
+#navbar p a {
+    color: @col-tx;
+    text-decoration: none;
 }
 
 /* CONTENT */
 
 #main {
-    padding-top: (@height-nav + 10);
+    margin-top: (@height-nav);
+//    padding-top: (@height-nav + 10);
     padding-bottom: @height-hf;
     .side-padding;
 }
@@ -170,4 +194,88 @@ body {
     background: @col-hf;
     display: table;
     .side-padding;
+}
+
+#footer a {
+    color: #ff7373;
+    text-decoration: none;
+}
+
+#footer * {
+    vertical-align: middle;
+    padding: 0;
+}
+
+#footer-top {
+    display: table-row;
+}
+
+#footer-bottom {
+    display: table-row;
+}
+
+/* FTC/FRC logos */
+
+#footer-leagues {
+    width: 20%;
+    display: table-cell;
+}
+
+#footer-leagues img {
+    height: 50px;
+    -webkit-transition: all 0.25s ease-in-out;
+    -moz-transition: all 0.25s ease-in-out; 
+    -o-transition: all 0.25s ease-in-out; 
+    -ms-transition: all 0.25s ease-in-out;
+}
+
+#footer-leagues img {
+    background: #ffffff;
+}
+
+#footer-leagues img:hover {
+    background: #ff7373;
+}
+
+/* Warwick HS Info */
+
+#footer-whs {
+    font-size: 0.8em;
+    display: table-cell;
+    width: 20%;
+    padding-left: 2%;
+}
+
+/* Social Media Logos */
+
+#footer-socialmedia {
+    width: 60%;
+    display: table-cell;
+}
+
+#footer-socialmedia p {
+    display: inline;
+}
+
+#footer-socialmedia img {
+    padding: 30px;
+    height: 50px;
+    -webkit-transition: all 0.25s ease-in-out;
+    -moz-transition: all 0.25s ease-in-out; 
+    -o-transition: all 0.25s ease-in-out; 
+    -ms-transition: all 0.25s ease-in-out; 
+}
+
+#footer-socialmedia img:hover {
+    height: 75px;
+}
+
+/* Bottom Info */
+
+#footer-bottom-info {
+    line-height: 10%;
+    width: 960px;
+    font-size: 0.75em;
+    text-align: center;
+    font-family: 'Open Sans', Helvetica, Arial, sans-serif
 }
