--- a/css/universal.css
+++ b/css/universal.css
@@ -5,9 +5,16 @@
   -o-transition: all 0.15s linear;
   -ms-transition: all 0.15s linear;
 }
+.bottomround {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
 /* FONT SELECTION */
 * {
   color: #f2f2f2;
+}
+a {
+  color: #b2b2b2;
 }
 h1 {
   font-family: 'Open Sans', Verdana, Helvetica, Arial, sans-serif;
@@ -22,12 +29,22 @@ body {
   font-family: 'Droid Sans', Helvetica, Arial, Verdana, sans-serif;
   font-weight: normal;
 }
+/* FONT CLASSES */
+.left {
+  text-align: left;
+}
+.center {
+  text-align: center;
+}
+.right {
+  text-align: right;
+}
 /* REUSED */
 .youtube {
   box-shadow: 3px 3px 3px #000;
 }
 /* HOME */
-#teamphoto {
+#teamphoto-box {
   width: 500px;
   height: 300px;
   border: 1px solid #f2f2f2;
@@ -70,4 +87,86 @@ body {
 }
 #team-table .normalp p {
   font-size: 1em;
+}
+/* Sponsors */
+#sp-logos {
+  width: 50%;
+  margin: 0 auto;
+  float: left;
+}
+#sp-logos img {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: block;
+  margin: 0 auto;
+  width: 250px;
+}
+#sp-people {
+  width: 50%;
+  float: right;
+}
+/* GAME INFORMATION */
+.gameinfo {
+  margin: 0 auto;
+  table-layout: fixed;
+  padding-bottom: 20px;
+}
+.gameinfo * {
+  vertical-align: middle;
+}
+.gameinfo .gamelogo {
+  padding-right: 20px;
+  border-right: 1px solid black;
+}
+.gameinfo .gamelogo img {
+  width: 200px;
+}
+.gameinfo .gamevideo {
+  padding-left: 20px;
+}
+.gamecontainer {
+  display: block;
+}
+.gamelinks {
+  float: left;
+  height: 100%;
+}
+.gamelinks a {
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  -o-transition: all 0.15s linear;
+  -ms-transition: all 0.15s linear;
+  text-decoration: none;
+  color: #f2f2f2;
+}
+.gamelinks a:hover {
+  font-weight: bold;
+  color: #b2b2b2;
+  padding-left: 20px;
+}
+.gametext {
+  display: block;
+  float: right;
+}
+/* CALENDAR */
+#ev-gcal {
+  display: block;
+  margin: auto;
+}
+/* LINKS */
+.linkdesc {
+  font-size: 0.8em;
+}
+#links a {
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  -o-transition: all 0.15s linear;
+  -ms-transition: all 0.15s linear;
+  text-decoration: none;
+  color: #f2f2f2;
+}
+#links a:hover {
+  font-weight: bold;
+  padding-left: 20px;
+  color: #b2b2b2;
 }
