--- a/css/universal.less
+++ b/css/universal.less
@@ -20,6 +20,13 @@
 
 a {
     color: @col-ln;
+    text-decoration: none;
+    .smoothtrans(0.05s);
+}
+
+a:hover {
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 h1 {
