Changed font for h1

--- a/css/universal.css
+++ b/css/universal.css
@@ -20,7 +20,7 @@ a:hover {
   text-transform: uppercase;
 }
 h1 {
-  font-family: 'Open Sans', Verdana, Helvetica, Arial, sans-serif;
+  font-family: 'Oswald', Verdana, Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: bold;
 }
