--- a/css/universal.less
+++ b/css/universal.less
@@ -30,7 +30,7 @@ a:hover {
 }
 
 h1 {
-    font-family: 'Open Sans', Verdana, Helvetica, Arial, sans-serif;
+    font-family: 'Oswald', Verdana, Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     font-weight: bold;
 }
