Fixed navbar radius (when highlighted)

--- a/css/index.less
+++ b/css/index.less
@@ -168,6 +168,14 @@ a {
     font-weight: bold;
 }
 
+#navbar p:first-child:hover {
+    border-bottom-left-radius: 10px;
+}
+
+#navbar p:last-child:hover {
+    border-bottom-right-radius: 10px;
+}
+
 #navbar p a {
     color: @col-tx;
     text-decoration: none;
