--- a/css/index.css
+++ b/css/index.css
@@ -147,6 +147,12 @@ a {
   color: #b2b2b2;
   font-weight: bold;
 }
+#navbar p:first-child:hover {
+  border-bottom-left-radius: 10px;
+}
+#navbar p:last-child:hover {
+  border-bottom-right-radius: 10px;
+}
 #navbar p a {
   color: #f2f2f2;
   text-decoration: none;
