--- a/css/vars.less
+++ b/css/vars.less
@@ -8,10 +8,13 @@
 @col-bg: #4A0101;
 @col-hf: #660202;
 @col-nv: 'col-hf';
-@col-bd: #a30303;
+@col-bd: #F2F2F2;
 
-@col-tx: #F2F2F2;
-@col-ln: #B2B2B2;
+@col-tx: #2a2a2a;
+@col-ln: #1a1a1a;
+
+@col-hf-tx: #f2f2f2;
+@col-hf-ln: #a2a2a2;
 
 @height-hf: 150px;
 @height-nav: 50px;
