--- a/css/index.less
+++ b/css/index.less
@@ -2,7 +2,7 @@
 // FTC 5969 | FRC 4538
 // DESIGN BY JONATHAN LACSON
 // LESS (CSS) -- INDEX PAGE ONLY!
-// CODED IN BRACKETS  
+// CODED IN BRACKETS
 
 // VARIABLES
 @import "vars.less";
@@ -57,6 +57,10 @@ a {
     .side-padding;
 }
 
+#header * {
+    color: @col-hf-tx;
+}
+
 #header-logo {
     display: table-cell;
     vertical-align: middle;
@@ -101,12 +105,12 @@ a {
 }
 
 #header a {
-    color: @col-tx;
+    color: @col-hf-tx;
     text-decoration: none;
 }
 
 #header a:visited {
-    color: @col-tx;
+    color: @col-hf-tx;
 }
 
 #header-firstlogo {
@@ -158,13 +162,13 @@ a {
     /* STYLING */
     text-transform: uppercase;
     text-align: center;
-    color: @col-tx;
+    color: @col-hf-tx;
     .smoothtrans;
 }
 
 #navbar p:hover {
     background: (@col-hf - 50);
-    color: @col-ln;
+    color: @col-hf-ln;
     font-weight: bold;
 }
 
@@ -177,7 +181,7 @@ a {
 }
 
 #navbar p a {
-    color: @col-tx;
+    color: @col-hf-tx;
     text-decoration: none;
 }
 
@@ -215,8 +219,13 @@ a {
 }
 
 #footer * {
+    color: @col-hf-tx;
     vertical-align: middle;
     padding: 0;
+}
+
+#footer a {
+    color: @col-hf-ln;
 }
 
 #footer-top {
@@ -244,11 +253,11 @@ a {
 }
 
 #footer-leagues img {
-    background: @col-tx;
+    background: @col-hf-tx;
 }
 
 #footer-leagues img:hover {
-    background: @col-ln;
+    background: @col-hf-ln;
 }
 
 /* Warwick HS Info */
