--- a/css/universal.css
+++ b/css/universal.css
@@ -5,10 +5,10 @@
 }
 /* FONT SELECTION */
 * {
-  color: #f2f2f2;
+  color: #2a2a2a;
 }
 a {
-  color: #b2b2b2;
+  color: #1a1a1a;
   text-decoration: none;
   -webkit-transition: all 0.05s linear;
   -moz-transition: all 0.05s linear;
@@ -17,7 +17,6 @@ a {
 }
 a:hover {
   font-weight: bold;
-  text-transform: uppercase;
 }
 h1 {
   font-family: 'Oswald', Verdana, Helvetica, Arial, sans-serif;
@@ -50,7 +49,7 @@ body {
 #teamphoto-box {
   width: 500px;
   height: 300px;
-  border: 1px solid #f2f2f2;
+  border: 1px solid #2a2a2a;
   margin: auto;
 }
 /* TEAM TABLE */
@@ -67,7 +66,7 @@ body {
   width: 200px;
   text-align: right;
   padding-right: 10px;
-  border-right: 1px solid #f2f2f2;
+  border-right: 1px solid #2a2a2a;
 }
 #team-table tr td:nth-child(2) {
   padding-left: 10px;
@@ -80,7 +79,7 @@ body {
 }
 #team-table thead tr td {
   text-transform: none;
-  border-bottom: 1px solid #f2f2f2;
+  border-bottom: 1px solid #2a2a2a;
 }
 #team-table tr td p {
   display: inline;
@@ -140,11 +139,11 @@ body {
   -o-transition: all 0.15s linear;
   -ms-transition: all 0.15s linear;
   text-decoration: none;
-  color: #f2f2f2;
+  color: #2a2a2a;
 }
 .gamelinks a:hover {
   font-weight: bold;
-  color: #b2b2b2;
+  color: #1a1a1a;
   padding-left: 20px;
 }
 .gametext {
@@ -166,10 +165,10 @@ body {
   -o-transition: all 0.15s linear;
   -ms-transition: all 0.15s linear;
   text-decoration: none;
-  color: #f2f2f2;
+  color: #2a2a2a;
 }
 #links a:hover {
   font-weight: bold;
   padding-left: 20px;
-  color: #b2b2b2;
+  color: #1a1a1a;
 }
