--- a/css/universal.css
+++ b/css/universal.css
@@ -46,10 +46,8 @@ body {
   box-shadow: 3px 3px 3px #000;
 }
 /* HOME */
-#teamphoto-box {
-  width: 500px;
-  height: 300px;
-  border: 1px solid #2a2a2a;
+.teamphoto {
+  width: 50%;
   margin: auto;
 }
 /* TEAM TABLE */
