--- a/css/universal.less
+++ b/css/universal.less
@@ -66,10 +66,8 @@ body {
 
 /* HOME */
 
-#teamphoto-box {
-    width: 500px;
-    height: 300px;
-    border: 1px solid @col-tx;
+.teamphoto {
+    width: 50%;
     margin: auto;
 }
 
