--- a/css/universal.less
+++ b/css/universal.less
@@ -67,8 +67,9 @@ body {
 /* HOME */
 
 .teamphoto {
+    display: block;
     width: 50%;
-    margin: auto;
+    margin: 0 auto;
 }
 
 /* TEAM TABLE */
