--- a/css/master.css
+++ b/css/master.css
@@ -269,3 +269,171 @@ a {
   text-align: center;
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
+/* FONT SELECTION */
+* {
+  color: #2a2a2a;
+}
+a {
+  color: #1a1a1a;
+  text-decoration: none;
+  -webkit-transition: all 0.05s linear;
+  -moz-transition: all 0.05s linear;
+  -o-transition: all 0.05s linear;
+  -ms-transition: all 0.05s linear;
+}
+a:hover {
+  font-weight: bold;
+}
+h1 {
+  font-family: 'Oswald', Verdana, Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+h2 {
+  font-family: 'Open Sans', Verdana, Helvetica, Arial, sans-serif;
+  font-weight: bold;
+}
+body {
+  font-family: 'Droid Sans', Helvetica, Arial, Verdana, sans-serif;
+  font-weight: normal;
+}
+/* FONT CLASSES */
+.left {
+  text-align: left;
+}
+.center {
+  text-align: center;
+}
+.right {
+  text-align: right;
+}
+/* REUSED */
+.youtube {
+  box-shadow: 3px 3px 3px #000;
+}
+/* HOME */
+.teamphoto {
+  display: block;
+  width: 50%;
+  margin: 0 auto;
+}
+/* TEAM TABLE */
+#team-table {
+  margin: 0 auto;
+  table-layout: fixed;
+}
+#team-table tr td {
+  vertical-align: middle;
+}
+#team-table tr td:first-child {
+  font-weight: bold;
+  text-transform: uppercase;
+  width: 200px;
+  text-align: right;
+  padding-right: 10px;
+  border-right: 1px solid #2a2a2a;
+}
+#team-table tr td:nth-child(2) {
+  padding-left: 10px;
+}
+#team-table tr td p:last-child:after {
+  content: " ";
+}
+#team-table tr td p:after {
+  content: ",";
+}
+#team-table thead tr td {
+  text-transform: none;
+  border-bottom: 1px solid #2a2a2a;
+}
+#team-table tr td p {
+  display: inline;
+  border: 0;
+  text-align: left;
+  font-size: 0.8em;
+}
+#team-table .normalp p {
+  font-size: 1em;
+}
+/* Sponsors */
+#sp-logos {
+  width: 50%;
+  margin: 0 auto;
+  float: left;
+}
+#sp-logos img {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: block;
+  margin: 0 auto;
+  width: 250px;
+}
+#sp-people {
+  width: 50%;
+  float: right;
+}
+/* GAME INFORMATION */
+.gameinfo {
+  margin: 0 auto;
+  table-layout: fixed;
+  padding-bottom: 20px;
+}
+.gameinfo * {
+  vertical-align: middle;
+}
+.gameinfo .gamelogo {
+  padding-right: 20px;
+  border-right: 1px solid black;
+}
+.gameinfo .gamelogo img {
+  width: 200px;
+}
+.gameinfo .gamevideo {
+  padding-left: 20px;
+}
+.gamecontainer {
+  display: block;
+}
+.gamelinks {
+  float: left;
+  height: 100%;
+}
+.gamelinks a {
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  -o-transition: all 0.15s linear;
+  -ms-transition: all 0.15s linear;
+  text-decoration: none;
+  color: #2a2a2a;
+}
+.gamelinks a:hover {
+  font-weight: bold;
+  color: #1a1a1a;
+  padding-left: 20px;
+}
+.gametext {
+  display: block;
+  float: right;
+}
+/* CALENDAR */
+#ev-gcal {
+  display: block;
+  margin: auto;
+}
+/* LINKS */
+.linkdesc {
+  font-size: 0.8em;
+}
+#links a {
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  -o-transition: all 0.15s linear;
+  -ms-transition: all 0.15s linear;
+  text-decoration: none;
+  color: #2a2a2a;
+}
+#links a:hover {
+  font-weight: bold;
+  padding-left: 20px;
+  color: #1a1a1a;
+}
