Played with paddings

--- a/css/master.css
+++ b/css/master.css
@@ -169,6 +169,7 @@ a {
 /* CONTENT */
 #main {
   margin-top: 50px;
+  padding-top: 10px;
   padding-bottom: 150px;
   padding-left: 10px;
   padding-right: 10px;
