--- a/css/master.less
+++ b/css/master.less
@@ -228,7 +228,9 @@ a {
 
 #main {
     margin-top: (@height-nav);
-//    padding-top: (@height-nav + 10);
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
     padding-bottom: @height-hf;
     .side-padding;
 }
