--- a/css/master.less
+++ b/css/master.less
@@ -127,12 +127,16 @@ a {
     font-weight: 500;
     font-size: 300%;
     text-transform: none;
-    margin-bottom: (@ht-lnspc / 2);
 }
 
 #header-text h2 {
+    display: none;
     vertical-align: middle;
-    margin-top: (@ht-lnspc / 2);
+}
+
+#header-text h1:hover,
+#header-text h2 {
+    display: block;
 }
 
 #header a {
