Suggested footer changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <!-- FOOTER -->
 <div id="footer-top">
     <div id="footer-leagues" class="center">
-        <p><a target="_blank" title="FRC Information" href="http://usfirst.org/frc"><img alt="FRC logo" src="./assets/hf/frc.png"></a></p>
-        <p><a target="_blank" title="FTC Information" href="http://usfirst.org/ftc"><img alt="FTC logo" src="./assets/hf/ftc.png"></a></p>
+        <p><a target="_blank" title="FRC Information" href="http://www3.usfirst.org/roboticsprograms/ftc"><img alt="FTC logo" src="./assets/hf/ftc.png"></a></p>
+        <p><a target="_blank" title="FTC Information" href="http://www3.usfirst.org/roboticsprograms/frc"><img alt="FRC logo" src="./assets/hf/frc.png"></a></p>
     </div>
     <div id="footer-whs">
         <p><a href="http://warwick.nn.k12.va.us">Warwick High School</a><br>
