fixed css with updated team roster

--- a/css/master.less
+++ b/css/master.less
@@ -43,7 +43,7 @@
 html, body {
     padding: 0;
     margin: auto;
-    height: 1550px;
+    height: 1550px; /* to be fixed with a better solution later */
 }
 
 html {
@@ -479,6 +479,12 @@ body {
     border: 0;
     text-align: left;
     font-size: 0.8em;
+}
+
+#team-table tr:last-child td p {
+    display: block;
+    border: 0;
+    text-align: left;
 }
 
 #team-table .normalp p {
