--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -13,6 +13,20 @@
             });
     </script>
 <!--
+    TEST SCRIPT - DYNAMIC PAGE HEIGHT
+
+    <script>
+        $(document).ready(function() {
+            var docHeight = $(window).height();
+            var footerHeight = $('#footer').height();
+            var footerTop = $('#footer').position().top + footerHeight;
+            if (footerTop < docHeight) {
+            $('#footer').css('margin-top', 10+ (docHeight - footerTop) + 'px');
+            }
+        });
+    </script>
+-->
+<!--
     GOOGLE ANALYTICS
 -->
     <script>
