--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,5 +7,6 @@
 <p><a href="./ftc.html">FTC</a></p>
 <p><a href="./frc.html">FRC</a></p>
 <p><a href="./media.html">Media</a></p>
+<p><a href="./resources.html">Resources</a></p>
 <p><a href="./events.html">Events</a></p>
 <p><a href="./links.html">Links</a></p>
