Updated FRC/FTC games, updated header /w girls team

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <!-- FOOTER -->
 <div id="footer-top">
     <div id="footer-leagues" class="center">
-        <p><a target="_blank" title="FTC Information" href="http://www3.usfirst.org/roboticsprograms/ftc"><img alt="FTC logo" src="./assets/hf/ftc.png"></a></p>
-        <p><a target="_blank" title="FRC Information" href="http://www3.usfirst.org/roboticsprograms/frc"><img alt="FRC logo" src="./assets/hf/frc.png"></a></p>
+        <p><a target="_blank" title="FTC Information" href="http://www3.usfirst.org/roboticsprograms/ftc"><img alt="FTC logo" src="/assets/hf/ftc.png"></a></p>
+        <p><a target="_blank" title="FRC Information" href="http://www3.usfirst.org/roboticsprograms/frc"><img alt="FRC logo" src="/assets/hf/frc.png"></a></p>
     </div>
     <div id="footer-whs">
         <p><a href="http://warwick.nn.k12.va.us">Warwick High School</a><br>
@@ -12,13 +12,13 @@
         (757) 591-4700
     </div>
     <div id="footer-socialmedia">
-        <p><a target="_blank" title="Like Us on Facebook" href="https://www.facebook.com/pages/Team-Enginuity-Warwick-High-School-Robotics-Team/574751449237559"><img alt="Facebook logo" src="./assets/hf/facebook.png"></a></p>
-        <p><a target="_blank" title="Follow Us on Twitter" href="http://www.twitter.com/EnginuityWHS"><img alt="Twitter logo" src="./assets/hf/twitter.png"></a></p>
-        <p><a target="_blank" title="Follow Us on Instagram" href="http://www.instagram.com/EnginuityWHS"><img alt="Instagram Logo" src="./assets/hf/ig.png"></a></p>
+        <p><a target="_blank" title="Like Us on Facebook" href="https://www.facebook.com/pages/Team-Enginuity-Warwick-High-School-Robotics-Team/574751449237559"><img alt="Facebook logo" src="/assets/hf/facebook.png"></a></p>
+        <p><a target="_blank" title="Follow Us on Twitter" href="http://www.twitter.com/EnginuityWHS"><img alt="Twitter logo" src="/assets/hf/twitter.png"></a></p>
+        <p><a target="_blank" title="Follow Us on Instagram" href="http://www.instagram.com/EnginuityWHS"><img alt="Instagram Logo" src="/assets/hf/ig.png"></a></p>
     </div>
 </div>
 <div id="footer-bottom">
     <div id="footer-bottom-info">
-        <p><a href="./aboutpg.html">Technical Information</a> | Site looks best on <a target="_blank" href="http://www.mozilla.com/firefox">Firefox</a> or <a target="_blank" href="http://www.google.com/chrome">Chrome</a></p>
+        <p><a href="/contact.html">Contact Us</a> | <a href="/aboutpg.html">Technical Information</a> | Site looks best on <a target="_blank" href="http://www.mozilla.com/firefox">Firefox</a> or <a target="_blank" href="http://www.google.com/chrome">Chrome</a></p>
     </div>
 </div>
