--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,12 +1,11 @@
 <!-- NAVIGATION -->
-<p><a href="./index.html">Home</a></p>
-<p><a href="./team.html">Team</a></p>
-<p><a href="./sponsors.html">Sponsors</a></p>
-<p><a href="./contact.html">Contact</a></p>
-<p><a href="./first.html">FIRST</a></p>
-<p><a href="./ftc.html">FTC</a></p>
-<p><a href="./frc.html">FRC</a></p>
-<p><a href="./media.html">Media</a></p>
-<p><a href="./resources.html">Resources</a></p>
-<p><a href="./events.html">Events</a></p>
-<p><a href="./links.html">Links</a></p>
+<p><a href="/index.html">Home</a></p>
+<p><a href="/team.html">Team</a></p>
+<p><a href="/sponsors.html">Sponsors</a></p>
+<p><a href="/first.html">FIRST</a></p>
+<p><a href="/ftc.html">FTC</a></p>
+<p><a href="/frc.html">FRC</a></p>
+<p><a href="/media.html">Media</a></p>
+<p><a href="/resources.html">Resources</a></p>
+<p><a href="/events.html">Events</a></p>
+<p><a href="/links.html">Links</a></p>
