--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -12,11 +12,12 @@
                 $('#navbar').css('top',0);
             });
     </script>
+
 <!--
     TEST SCRIPT - DYNAMIC PAGE HEIGHT
 
     <script>
-        $(document).ready(function() {
+        $(document).ready(function() {Alliances receive large bonuses for “assists,” which are earned for each robot that has possession of the ball in a zone as the ball moves down the field.
             var docHeight = $(window).height();
             var footerHeight = $('#footer').height();
             var footerTop = $('#footer').position().top + footerHeight;
@@ -26,6 +27,7 @@
         });
     </script>
 -->
+
 <!--
     GOOGLE ANALYTICS
 -->
