--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <!-- HEADER -->
 <div id="header-logo">
-    <a href="./index.html"><img alt="Team Logo" src=./assets/hf/headerlogo.png></a>
+    <a href="/index.html"><img alt="Team Logo" src=/assets/hf/headerlogo.png></a>
 </div>
 <div id="header-text">
     <h1 title="Pronounced en·gi·new·i·ty">Team Enginuity</h1>
-    <h2><strong>FTC #5969 | FRC #4538</strong></h2>
+    <h2><strong>FTC #5969 | FRC #4538 | </strong></h2><h2 id='royaldragons'><strong>FTC #7084</strong></h2>
 </div>
 <div id="header-firstlogo">
-    <a href="http://www.usfirst.org" target="_blank" title="Link to FIRST"><img alt="FIRST logo" src=./assets/hf/firstlogo.png /></a>
+    <a href="http://www.usfirst.org" target="_blank" title="Link to FIRST"><img alt="FIRST logo" src=/assets/hf/firstlogo.png /></a>
 </div>
