--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -17,7 +17,7 @@
     TEST SCRIPT - DYNAMIC PAGE HEIGHT
 
     <script>
-        $(document).ready(function() {Alliances receive large bonuses for “assists,” which are earned for each robot that has possession of the ball in a zone as the ball moves down the field.
+        $(document).ready(function() {
             var docHeight = $(window).height();
             var footerHeight = $('#footer').height();
             var footerTop = $('#footer').position().top + footerHeight;
