Updated FIRST page, added new navbar, media page fix, girls/guys skel. pages

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,11 +1,18 @@
-<!-- NAVIGATION -->
-<p><a href="/index.html">Home</a></p>
-<p><a href="/team.html">Team</a></p>
-<p><a href="/sponsors.html">Sponsors</a></p>
-<p><a href="/first.html">FIRST</a></p>
-<p><a href="/ftc.html">FTC</a></p>
-<p><a href="/frc.html">FRC</a></p>
-<p><a href="/media.html">Media</a></p>
-<p><a href="/resources.html">Resources</a></p>
-<p><a href="/events.html">Events</a></p>
-<p><a href="/links.html">Links</a></p>
+<!-- NAVIGATION --> 
+<ul>
+    <li><a href="/index.html">Home</a></li>
+    <li><a href="/team.html">Team</a></li>
+    <li><a href="/sponsors.html">Sponsors</a></li>
+    <li><a href="/first.html">FIRST</a></li>
+    <li><a href="/ftc.html">FTC</a>
+        <ul>
+            <li><a href="/ftcgirls.html">Girls #7084</a></li>
+            <li><a href="/ftcguys.html">Guys #5969</a></li>
+        </ul>
+    </li>
+    <li><a href="/frc.html">FRC</a></li>
+    <li><a href="/media.html">Media</a></li>
+    <li><a href="/resources.html">Resources</a></li>
+    <li><a href="/events.html">Events</a></li>
+    <li><a href="/links.html">Links</a></li>
+</ul>
