--- a/css/master.css
+++ b/css/master.css
@@ -116,7 +116,6 @@ a {
   height: 50px;
   /* STYLING */
   background: #660202;
-  display: table;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
@@ -124,7 +123,7 @@ a {
   content: "";
   width: 950px;
   height: 0px;
-  margin-top: 48px;
+  margin-top: 2px;
   margin-left: -475px;
   display: block;
   position: absolute;
@@ -134,7 +133,13 @@ a {
   -moz-box-shadow: 0px 0px 8px 2px #000000;
   box-shadow: 0px 0px 8px 2px #000000;
 }
-#navbar p {
+#navbar ul {
+  padding: 0;
+  margin: auto;
+  height: 100%;
+  display: table;
+}
+#navbar li {
   /* LAYOUT */
   display: table-cell;
   width: 96px;
@@ -150,25 +155,50 @@ a {
   -o-transition: all 0.15s linear;
   -ms-transition: all 0.15s linear;
 }
-#navbar p:hover {
+#navbar ul ul {
+  display: none;
+  background: #660202;
+  margin: 0;
+  padding: 0;
+  height: auto;
+  width: auto;
+  position: absolute;
+  top: 100%;
+  left: 40%;
+}
+#navbar ul ul li {
+  height: 50px;
+  vertical-align: middle;
+}
+#navbar ul li:hover > ul {
+  display: block;
+}
+#navbar ul ul li {
+  position: relative;
+  float: none;
+  display: block;
+}
+#navbar ul li:hover {
   background: #340000;
   color: #a2a2a2;
   font-weight: bold;
 }
-#navbar p:first-child:hover {
+#navbar ul:first-child li:first-child:hover {
   border-bottom-left-radius: 10px;
 }
-#navbar p:last-child:hover {
+#navbar ul:first-child li:last-child:hover {
   border-bottom-right-radius: 10px;
 }
-#navbar p a {
+#navbar ul li a {
   color: #f2f2f2;
   text-decoration: none;
+  padding: inherit;
+  text-align: center;
 }
-#navbar:hover > p {
+#navbar:hover > li {
   opacity: 0.5;
 }
-#navbar:hover > p:hover {
+#navbar:hover > li:hover {
   opacity: 1.0;
 }
 /* CONTENT */
@@ -500,21 +530,25 @@ body {
 .media object {
   margin: auto;
 }
+.media {
+  display: table;
+}
+.mediacontainer {
+  display: table-cell;
+  margin: auto;
+}
 #media-ftc {
   margin: auto;
   padding-left: 5px;
   padding-right: 2.5px;
-  display: inline-block;
 }
 #media-frc {
   margin: auto;
   padding-left: 2.5px;
   padding-right: 5px;
-  display: inline-block;
 }
 #media-com {
   margin: auto;
   padding-left: 2.5px;
   padding-right: 2.5px;
-  display: inline-block;
 }
