--- a/css/master.less
+++ b/css/master.less
@@ -169,7 +169,6 @@ a {
     height: @height-nav;
     /* STYLING */
     background: @col-hf;
-    display: table;
     .bottomround;
 }
 
@@ -177,7 +176,7 @@ a {
     content: "";
     width: 950px;
     height: 0px;
-    margin-top: 48px;
+    margin-top: 2px;
     margin-left: -475px;
     display: block;
     position: absolute;
@@ -188,11 +187,20 @@ a {
             box-shadow: 0px 0px 8px 2px #000000;
 }
 
-#navbar p {
+
+#navbar ul {
+    padding: 0;
+    margin: auto;
+    height: 100%;
+    display: table;
+}
+
+@navelements: 10;
+
+#navbar li {
     /* LAYOUT */
     display: table-cell;
     // MUST BE UPDATED IF MORE LINKS ARE ADDED
-    @navelements: 10;
     width: (@width / @navelements);
     vertical-align: middle;
     .side-padding(5px);
@@ -203,30 +211,59 @@ a {
     .smoothtrans;
 }
 
-#navbar p:hover {
+#navbar ul ul {
+    display: none;
+    background: @col-hf;
+    margin: 0;
+    padding: 0;
+    height: auto;
+    width: auto;
+    position: absolute;
+    top: 100%;
+    left: 40%;
+}
+
+#navbar ul ul li {
+    height: 50px;
+    vertical-align: middle;
+}
+
+#navbar ul li:hover > ul {
+    display: block;
+}
+
+#navbar ul ul li {
+    position: relative;
+    float: none;
+    display: block;
+}
+
+#navbar ul li:hover {
     background: (@col-hf - 50);
     color: @col-hf-ln;
     font-weight: bold;
 }
 
-#navbar p:first-child:hover {
+#navbar ul:first-child li:first-child:hover {
     border-bottom-left-radius: 10px;
 }
 
-#navbar p:last-child:hover {
+#navbar ul:first-child li:last-child:hover {
     border-bottom-right-radius: 10px;
 }
 
-#navbar p a {
+#navbar ul li a {
     color: @col-hf-tx;
     text-decoration: none;
+    padding: inherit;
+    text-align: center;
 }
 
-#navbar:hover > p {
+#navbar:hover > li {
     opacity: 0.5;
 }
 
-#navbar:hover > p:hover {
+#navbar:hover > li:hover {
     opacity: 1.0;
 }
 
@@ -633,23 +670,29 @@ body {
     margin: auto;
 }
 
+.media {
+    display: table;
+}
+
+.mediacontainer {
+    display: table-cell;
+    margin: auto;
+}
+
 #media-ftc {
     margin: auto;
     padding-left: @padding;
     padding-right: @padding / 2;
-    display: inline-block;
 }
 
 #media-frc {
     margin: auto;
     padding-left: @padding / 2;
     padding-right: @padding;
-    display: inline-block;
 }
 
 #media-com {
     margin: auto;
     padding-left: @padding / 2;
     padding-right: @padding / 2;
-    display: inline-block;
 }
