--- a/css/master.css
+++ b/css/master.css
@@ -350,7 +350,6 @@ body {
 /* HOME */
 .teamphoto {
   display: block;
-  width: 50%;
   margin: 0 auto;
 }
 #index-blurb {
@@ -391,32 +390,31 @@ body {
   padding-right: 10px;
   border-right: 1px solid #2a2a2a;
 }
+#team-table tr td h2 {
+  text-transform: none;
+}
 #team-table tr td:nth-child(2) {
   padding-left: 10px;
 }
-#team-table tr td p:last-child:after {
+#team-table tr:nth-child(2) td p {
+  display: inline;
+}
+#team-table tr:nth-child(2) td p:last-child:after {
+  /* ANOTHER DIRTY FIX */
   content: " ";
 }
-#team-table tr td p:after {
+#team-table tr:nth-child(2) td p:after {
   content: ",";
 }
-#team-table thead tr td {
+#team-table tr:first-child td {
   text-transform: none;
   border-bottom: 1px solid #2a2a2a;
 }
 #team-table tr td p {
-  display: inline;
-  border: 0;
-  text-align: left;
-  font-size: 0.8em;
-}
-#team-table tr:last-child td p {
   display: block;
   border: 0;
   text-align: left;
-}
-#team-table .normalp p {
-  font-size: 1em;
+  font-size: 0.8em;
 }
 /* Sponsors */
 #sp-appeal {
