--- a/css/master.css
+++ b/css/master.css
@@ -13,6 +13,9 @@ body {
 }
 html {
   background-color: #4a0101;
+  background-image: linear-gradient(30deg, #290000 12%, transparent 12.5%, transparent 87%, #290000 87.5%, #290000), linear-gradient(150deg, #290000 12%, transparent 12.5%, transparent 87%, #290000 87.5%, #290000), linear-gradient(30deg, #290000 12%, transparent 12.5%, transparent 87%, #290000 87.5%, #290000), linear-gradient(150deg, #290000 12%, transparent 12.5%, transparent 87%, #290000 87.5%, #290000), linear-gradient(60deg, #760000 25%, transparent 25.5%, transparent 75%, #760000 75%, #760000), linear-gradient(60deg, #760000 25%, transparent 25.5%, transparent 75%, #760000 75%, #760000);
+  background-size: 80px 140px;
+  background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
 }
 body {
   /* BASE CODE */
@@ -20,8 +23,6 @@ body {
   width: 960px;
   /* STYLING */
   background: #f2f2f2;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
   -webkit-box-shadow: 0px 0px 8px 2px #000000;
   -moz-box-shadow: 0px 0px 8px 2px #000000;
   box-shadow: 0px 0px 8px 2px #000000;
@@ -116,8 +117,6 @@ a {
   height: 50px;
   /* STYLING */
   background: #660202;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
 }
 #navbar:after {
   content: "";
@@ -150,10 +149,6 @@ a {
   text-transform: uppercase;
   text-align: center;
   color: #f2f2f2;
-  -webkit-transition: all 0.15s linear;
-  -moz-transition: all 0.15s linear;
-  -o-transition: all 0.15s linear;
-  -ms-transition: all 0.15s linear;
 }
 #navbar ul ul {
   display: none;
@@ -182,12 +177,6 @@ a {
   background: #340000;
   color: #a2a2a2;
   font-weight: bold;
-}
-#navbar ul:first-child li:first-child:hover {
-  border-bottom-left-radius: 10px;
-}
-#navbar ul:first-child li:last-child:hover {
-  border-bottom-right-radius: 10px;
 }
 #navbar ul li a {
   color: #f2f2f2;
@@ -222,8 +211,6 @@ a {
   table-layout: fixed;
   padding-left: 10px;
   padding-right: 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
 }
 #footer * {
   color: #f2f2f2;
@@ -247,16 +234,17 @@ a {
 }
 #footer-leagues img {
   height: 50px;
+  background: #660202;
   -webkit-transition: all 0.25s ease-in-out;
   -moz-transition: all 0.25s ease-in-out;
   -o-transition: all 0.25s ease-in-out;
   -ms-transition: all 0.25s ease-in-out;
 }
-#footer-leagues img {
-  background: #f2f2f2;
+#footer-leagues:hover > p {
+  opacity: 0.5;
 }
-#footer-leagues img:hover {
-  background: #a2a2a2;
+#footer-leagues:hover > p:hover {
+  opacity: 1.0;
 }
 /* Warwick HS Info */
 #footer-whs {
