--- a/css/master.less
+++ b/css/master.less
@@ -46,8 +46,20 @@ html, body {
     height: 1550px; /* to be fixed with a better solution later */
 }
 
+@cube1: @col-bg;
+@cube2: #290000;
+@cube3: #760000;
+
 html {
-    background-color: @col-bg;
+    background-color: @cube1;
+    background-image: linear-gradient(30deg, @cube2 12%, transparent 12.5%, transparent 87%, @cube2 87.5%, @cube2),
+        linear-gradient(150deg, @cube2 12%, transparent 12.5%, transparent 87%, @cube2 87.5%, @cube2),
+        linear-gradient(30deg, @cube2 12%, transparent 12.5%, transparent 87%, @cube2 87.5%, @cube2),
+        linear-gradient(150deg, @cube2 12%, transparent 12.5%, transparent 87%, @cube2 87.5%, @cube2),
+        linear-gradient(60deg, @cube3 25%, transparent 25.5%, transparent 75%, @cube3 75%, @cube3), 
+        linear-gradient(60deg, @cube3 25%, transparent 25.5%, transparent 75%, @cube3 75%, @cube3);
+    background-size:80px 140px;
+    background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
 }
 
 body {
@@ -56,7 +68,6 @@ body {
     width: @width;
     /* STYLING */
     background: @col-bd;
-    .bottomround;
     -webkit-box-shadow: 0px 0px 8px 2px #000000;
        -moz-box-shadow: 0px 0px 8px 2px #000000;
             box-shadow: 0px 0px 8px 2px #000000;
@@ -169,7 +180,6 @@ a {
     height: @height-nav;
     /* STYLING */
     background: @col-hf;
-    .bottomround;
 }
 
 #navbar:after {
@@ -208,7 +218,6 @@ a {
     text-transform: uppercase;
     text-align: center;
     color: @col-hf-tx;
-    .smoothtrans;
 }
 
 #navbar ul ul {
@@ -242,14 +251,6 @@ a {
     background: (@col-hf - 50);
     color: @col-hf-ln;
     font-weight: bold;
-}
-
-#navbar ul:first-child li:first-child:hover {
-    border-bottom-left-radius: 10px;
-}
-
-#navbar ul:first-child li:last-child:hover {
-    border-bottom-right-radius: 10px;
 }
 
 #navbar ul li a {
@@ -291,7 +292,6 @@ a {
     display: table;
     table-layout: fixed;
     .side-padding;
-    .bottomround;
 }
 
 #footer * {
@@ -322,18 +322,19 @@ a {
 
 #footer-leagues img {
     height: 50px;
+    background: @col-hf;
     -webkit-transition: all 0.25s ease-in-out;
     -moz-transition: all 0.25s ease-in-out; 
     -o-transition: all 0.25s ease-in-out; 
     -ms-transition: all 0.25s ease-in-out;
 }
 
-#footer-leagues img {
-    background: @col-hf-tx;
+#footer-leagues:hover > p {
+    opacity: 0.5;
 }
 
-#footer-leagues img:hover {
-    background: @col-hf-ln;
+#footer-leagues:hover > p:hover {
+    opacity: 1.0;
 }
 
 /* Warwick HS Info */
