Updated title to match branding

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <a href="/index.html"><img alt="Team Logo" src=/assets/hf/headerlogo.png></a>
 </div>
 <div id="header-text">
-    <h1 title="Pronounced en·gi·new·i·ty">Team Enginuity</h1>
+    <h1 title="Pronounced en·gi·new·i·ty">enginuity</h1>
     <h2><strong>FTC #5969 | FRC #4538 | </strong></h2><h2 id='royaldragons'><strong>FTC #7084</strong></h2>
 </div>
 <div id="header-firstlogo">
